# pdflib

./: CMakeLists.txt  Makefile  README.md  pdf2for.sh
cmake/: Toolchain-mingw32.cmake  Toolchain-mingw64.cmake
doc/: CMakeLists.txt
include/: config.h
src/: CMakeLists.txt  ForOutputDev.cc  ForOutputDev.h  dm_poppler-1.0.vapi  dm_poppler.cc  dm_poppler.h  libdm_poppler.pc.in  libpdflib.pc.in  pdf2for.vala  pdflib.vala
tests/: CMakeLists.txt  test_pdflib.vala
